# Scheduler

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
docs/: UML.drawio
src/libBroker/: Broker.cpp  Broker.hpp  IBroker.hpp  Scheduler.cpp  Scheduler.hpp
src/libScheduler/: Scheduler.cpp  Scheduler.hpp
src/libWorker/: Worker.cpp  Worker.hpp
tests/broker_tests/: scheduler_test.cpp
tests/worker_tests/: worker_test.cpp
